# tailwindcss_palette

./: Cargo.toml  README.md
src/: lib.rs
