[package]
name = "tailwindcss_palette"
authors = ["Vladislav Grechannik <vgrechannik@gmail.com>"]
description = "Tailwind v4 colors in Rust's palette crate"
repository = "https://github.com/VlaDexa/tailwindcss_palette"
license = "MIT"
readme = "README.md"
keywords = ["colors", "color", "palette", "tailwind", "tailwindcss", "css"]
categories = ["graphics"]
version = "0.1.0"
edition = "2021"

[dependencies]
palette = "0.7.6"
